Basic web app setup:
Added the following features:
- Mariadb, HikariCP, Kotliquery
- Basic session handling
- Mostly centralized gradle config
- Request filtering
- Request error handling
- Crummy db table pattern

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,13 @@
 apply plugin: 'application'
 
 // Application plugin: Driver class
-mainClassName = "servers.verticles.Webapp"
+mainClassName = "servers.verticles.WebAppVerticle"
 
 
 dependencies {
-    compile libs.vertx
+    compile libs.vertxWeb,
+            libs.thymeleaf,
+            project(':common')
 }
 
 
