--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,12 @@ buildscript {
         hikaricpVersion = '2.4.3'
         mariaDbVersion = '1.3.6'
         guavaVersion = '19.0'
-//        kotliqueryVersion = '1.0.1'
         depAnalyzeVersion = '1.0.3'
         jetbrainsExposedVersion = '0.3.2'
         bouncyCastleVersion = '1.54'
         spekVersion = '0.1.195'
         apacheLangVersion = '3.4'
+        jodaTimeVersion = '2.9.2'
 
         libs = [
                 kotlinLang: "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion",
@@ -29,10 +29,8 @@ buildscript {
                 ],
                 gson:  "com.google.code.gson:gson:$gsonVersion",
                 hikaricp: "com.zaxxer:HikariCP:$hikaricpVersion",
-                vertxWeb: [
-                        "io.vertx:vertx-web:$vertxVersion",
-                        "io.vertx:vertx-auth-common:$vertxVersion"
-                ],
+                vertxWeb: "io.vertx:vertx-web:$vertxVersion",
+                vertxAuth: "io.vertx:vertx-auth-common:$vertxVersion",
                 vertxCore: "io.vertx:vertx-core:$vertxVersion",
                 thymeleaf: "io.vertx:vertx-web-templ-thymeleaf:$vertxVersion",
                 dbDriver: "org.mariadb.jdbc:mariadb-java-client:$mariaDbVersion",
@@ -40,9 +38,8 @@ buildscript {
                 jetbrainsExposed: "org.jetbrains.exposed:exposed:$jetbrainsExposedVersion",
                 depAnalyze: "ca.cutterslade.gradle:gradle-dependency-analyze:$depAnalyzeVersion",
                 bouncyCastle: "org.bouncycastle:bcprov-jdk15on:$bouncyCastleVersion",
-                apacheLang: "org.apache.commons:commons-lang3:$apacheLangVersion"
-
-                //                kotliquery: "com.github.seratch:kotliquery:$kotliqueryVersion",
+                apacheLang: "org.apache.commons:commons-lang3:$apacheLangVersion",
+                jodaTime: "joda-time:joda-time:$jodaTimeVersion"
         ]
 
         testLibs = [
@@ -78,7 +75,7 @@ subprojects {
         maven {
             url 'http://oss.sonatype.org/content/repositories/snapshots'
         }
-        maven {
+        maven { // Jetbrains exposed
             url 'https://dl.bintray.com/kotlin/exposed'
         }
         maven {
@@ -88,22 +85,18 @@ subprojects {
 
     dependencies {
         compile libs.kotlinLang,
+                libs.jodaTime,
                 libs.logging
         testCompile testLibs.spek
     }
 }
 
-configurations.all {
-    resolutionStrategy.eachDependency { details ->
-        if (details.requested.name == 'log4j') {
-            logger.warn("Skipping $requested dependency in favor of primary dependency version")
-            details.useTarget "org.apache.logging.log4j:log4j:$log4jVersion"
-        }
-    }
-}
-
-//apply plugin: 'ca.cutterslade.analyze'
-//
-//analyzeClassesDependencies {
-//    justWarn = true
+// Not working
+//configurations.all {
+//    resolutionStrategy.eachDependency { details ->
+//        if (details.requested.name.contains('log4j')) {
+//            logger.warn("Skipping $requested dependency in favor of primary dependency version")
+//            details.useTarget "org.apache.logging.log4j:log4j:$log4jVersion"
+//        }
+//    }
 //}
