--- a/app/src/main/tsx/tsconfig.json
+++ b/app/src/main/tsx/tsconfig.json
@@ -1,10 +1,11 @@
 {
-  "compileOnSave": true,
+  "compileOnSave": false,
   "compilerOptions": {
+    "noEmitOnError": true,
     "target": "es5",
     "jsx": "react",
     "moduleResolution": "node",
-    "module": "es6",
+    "module": "commonjs",
     "noImplicitReturns": true,
     "noImplicitAny": true,
     "preserveConstEnums": true,
@@ -25,7 +26,7 @@
     "!node_modules/**"
   ],
   "files": [
-    "./test.tsx",
+    "./main.tsx",
     "./typings/browser.d.ts",
     "./typings/browser/ambient/react-dom/index.d.ts",
     "./typings/browser/ambient/react/index.d.ts"
