--- a/app/src/main/tsx/tsconfig.json
+++ b/app/src/main/tsx/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "noImplicitReturns": true,
-    "noImplicitAny": true,
+//    "noImplicitAny": true,
     "preserveConstEnums": true,
     "outDir": "../webapp/static/js/",
     "sourceMap": true
