--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "description": "A vertx web project skeleton",
   "dependencies": {
+    "elemental": "^0.5.14",
     "react": "^0.14.8",
     "react-dom": "^0.14.8"
   },
@@ -23,6 +24,7 @@
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.9",
     "typings": "^0.7.12",
+    "webpack": "^1.13.0",
     "webpack-stream": "^3.1.0"
   },
   "scripts": {
