--- a/app/src/main/webapp/static/tsx/tsconfig.json
+++ b/app/src/main/webapp/static/tsx/tsconfig.json
@@ -26,7 +26,7 @@
     "!node_modules/**"
   ],
   "files": [
-    "./main.tsx",
+    "./components.tsx",
     "./typings/browser.d.ts",
     "./typings/browser/ambient/react-dom/index.d.ts",
     "./typings/browser/ambient/react/index.d.ts"
