--- a/app/package.json
+++ b/app/package.json
@@ -4,10 +4,14 @@
   "version": "0.0.1",
   "description": "A vertx web project skeleton",
   "dependencies": {
-    "check-types": "^6.0.0",
-    "jquery": "2.2.3",
-    "react": "15.0.2",
-    "react-dom": "15.0.2"
+    "immutable": "^3.8.1",
+    "jquery": "^2.2.3",
+    "material-ui": "^0.14.4",
+    "react": "^15.0.2",
+    "react-addons-pure-render-mixin": "^15.0.2",
+    "react-addons-update": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "type-check": "^0.3.2"
   },
   "devDependencies": {
     "concat": "0.0.1-security",
